fix：✍️修復overflow-x更改導致mini-header消失

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,10 +28,8 @@ body {
   flex-direction: column;
   height: 100%;
   width: 100%;
-  max-width: 100%;
   background: var(--bg-color);
   transition: 0.5s ease;
-  overflow-x: hidden;
 }
 
 main {
@@ -843,6 +841,10 @@ img.small {
 }
 img.medium {
   width: min(40rem, 100% - 2rem);
+}
+
+body.disable-overflow {
+  overflow-x: hidden;
 }
 
 .swiper {
