--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -22,10 +22,8 @@ body {
     flex-direction: column;
     height: 100%;
     width: 100%;
-    max-width: 100%;
     background: var(--bg-color);
     transition: 0.5s ease;
-    overflow-x: hidden;
 }
 
 main {
